--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>lose</title>
+    <link rel="stylesheet" href="stylesheet.css">
+    <script src="script.js" \>
+  </head>
+  <body bgcolor="yellow">
+    <h1>Your Files are Deleted!</h1>
+    <hr>
+    <p>Du hast alle deine dateien verloren</p>
+    
+  </body>
+</html>
+ <link rel="stylesheet" href="stylesheet.css">
